--- a/Dockerfile.fastrtc-cpu
+++ b/Dockerfile.fastrtc-cpu
@@ -1,4 +1,5 @@
-# Use an official Python runtime as a parent image
+# FastRTC Voice System Dockerfile (CPU-only version)
+# Use Python slim image for CPU-only deployment
 FROM python:3.11-slim
 
 # Set environment variables
@@ -6,7 +7,7 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install system dependencies needed for FastRTC and ML models
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     git \
@@ -20,31 +21,32 @@ RUN apt-get update && apt-get install -y \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-# Set the working directory in the container
+# Set the working directory
 WORKDIR /app
 
-# Copy the requirements files into the container at /app
+# Copy requirements files
 COPY requirements.txt .
 COPY fastrtc_requirements.txt .
 
-# Install any needed packages specified in requirements.txt
-# --no-cache-dir ensures we don't store the pip cache, keeping the image smaller
-# --upgrade pip ensures we have the latest pip version
+# Install Python dependencies (CPU versions)
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt && \
     pip install --no-cache-dir -r fastrtc_requirements.txt && \
     pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
-# Copy the rest of the application code into the container at /app
-# This includes main.py, OpenAIServer.py etc.
+# Copy the application code
 COPY . .
 
 # Create directories for models and cache
-RUN mkdir -p /app/models /app/cache
+RUN mkdir -p /app/models /app/cache /app/logs
 
-# Make port 8000 available to the world outside this container
+# Set permissions
+RUN chmod +x *.py
+
+# Expose the port
 EXPOSE 8000
 
+# Environment variables
 ENV GOOGLE_API_KEY="AIzaSyA9rsKvAwQ3JP9WCr0ZW_fE3q832-B4I8s"
 ENV GROQ_API_KEY="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"
 ENV CLICKUP_API_TOKEN="pk_96732703_BMQ18G3SJ5N7TGYFFKAVDXXS0LP6QT1I"
@@ -55,5 +57,9 @@ ENV HF_HOME=/app/cache
 ENV TRANSFORMERS_CACHE=/app/cache
 ENV CUDA_VISIBLE_DEVICES=""
 
-# Run main.py when the container launches using uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the FastRTC server
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
