--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ soundfile>=0.12.0
 faster-whisper>=1.0.0
 torch>=2.0.0
 torchaudio>=2.0.0
+
+# SMS RAG - Vector store and semantic search
+chromadb>=0.4.0
+sentence-transformers>=2.2.0
