--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ torchaudio>=2.0.0
 # SMS RAG - Vector store and semantic search
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
+
+# MCP (Model Context Protocol) for AgentZero tool calling
+mcp>=1.0.0
+sse-starlette>=1.6.0
